--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,10 @@
         android:id="@+id/record"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/record" />
+        android:text="start record"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        />
+
 
 </RelativeLayout>
