--- a/app/src/main/res/layout/activity_record.xml
+++ b/app/src/main/res/layout/activity_record.xml
@@ -8,6 +8,13 @@
     android:orientation="vertical"
     tools:context=".Record">
 
+    <Button
+        android:id="@+id/summary"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:text="summary" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -18,67 +25,60 @@
 
         <Spinner
             android:id="@+id/Month"
-            android:layout_width="wrap_content"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:entries="@array/month_choice" />
 
         <Spinner
             android:id="@+id/Day"
-            android:layout_width="wrap_content"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:entries="@array/day_choice" />
 
         <Spinner
             android:id="@+id/Category"
-            android:layout_width="wrap_content"
+            android:layout_width="60dp"
             android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:entries="@array/category_choice" />
 
         <EditText
             android:id="@+id/Item"
-            android:layout_width="wrap_content"
+            android:layout_width="60dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="@string/enter_item" />
-
-        <EditText
-            android:id="@+id/Amount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="4"
-            android:hint="@string/enter_item"
-            android:inputType="number" />
+            android:hint="item" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="50dp"
+        android:layout_weight="1"
         android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/Amount"
+            android:layout_width="200dp"
+            android:layout_height="40dp"
+            android:hint="amount"
+            android:inputType="number" />
 
         <Button
             android:id="@+id/addItem"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/add" />
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:text="add" />
+
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/items_list"
-        android:orientation="horizontal"
-        android:layout_marginBottom="12dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/summary"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="@string/show_summary" />
+        android:layout_height="19dp"
+        android:orientation="vertical"></LinearLayout>
 
 
 </LinearLayout>
