--- a/app/src/main/res/layout/activity_record.xml
+++ b/app/src/main/res/layout/activity_record.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/LinearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -15,11 +15,22 @@
         android:layout_gravity="right"
         android:text="summary" />
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:id="@+id/items_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"></LinearLayout>
+    </ScrollView>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
         android:layout_marginBottom="12dp"
+        android:layout_marginTop="12dp"
         android:orientation="horizontal">
 
 
@@ -63,8 +74,7 @@
             android:id="@+id/Amount"
             android:layout_width="200dp"
             android:layout_height="40dp"
-            android:hint="amount"
-            android:inputType="number" />
+            android:hint="amount" />
 
         <Button
             android:id="@+id/addItem"
@@ -73,12 +83,6 @@
             android:text="add" />
 
     </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/items_list"
-        android:layout_width="match_parent"
-        android:layout_height="19dp"
-        android:orientation="vertical"></LinearLayout>
 
 
 </LinearLayout>
